Fix live game spectating lifecycle
